# zkxsubstrate

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.after-drop-data  Dockerfile.base  Dockerfile.node  Dockerfile.node-production  Dockerfile.node-test  Dockerfile.update  flake.nix  rust-toolchain.toml
.github/workflows/: stage.yml  stand-1.yml  stand-2.yml  stand-3.yml  stand-4.yml
.helm/l3/: Chart.yaml  sandbox-2-follower-values.yml  sandbox-2-main-values.yml  sandbox-2-node-1-values.yml  sandbox-2-node-1.yml  sandbox-2-node-2-values.yml  sandbox-2-node-2.yml  sandbox-2-node-3-values.yml  sandbox-2-node-3.yml  sandbox-2-node-4-not-validator.yml  sandbox-follower-values.yml  sandbox-main-values.yml  sandbox-node-1-values.yml  sandbox-node-1.yml  sandbox-node-2-values.yml  sandbox-node-2.yml  sandbox-node-3.yml  stage-follower-values.yml  stage-main-values.yml  stage-node-1.yml  stage-node-2.yml  stage-node-3.yml  stage-node-4.yml  stage-node-rpc-1.yml  stage-node-rpc-2.yml  stand-1-follower-values.yml  stand-1-main-values.yml  stand-1-node-1.yml  stand-1-node-2.yml  stand-1-node-3.yml  stand-2-follower-values.yml  stand-2-main-values.yml  stand-2-node-1.yml  stand-2-node-2.yml  stand-3-follower-values.yml  stand-3-main-values.yml  stand-3-node-1.yml  stand-3-node-2.yml  stand-4-follower-values.yml  stand-4-main-values.yml  (+18 more)
.helm/l3-front/: Chart.yaml  sandbox-2-values.yml  sandbox-values.yml  stand-5-values.yml  stand1-values.yml  stand3-values.yml  stand4-values.yml  values-stage.yml  values-stand-1.yml  values-stand-2.yml  values.yml
.helm/l3-front/templates/: deployments.yml  ingress.yml  service.yml
.helm/l3/templates/: _helpers.tpl  customNodeKeySecret.yaml  statefulset.yaml
.helm/root/: Chart.yaml  values.yml
.helm/root/templates/: secret.yml  service.yml
node/: Cargo.toml
node/src/: chain_spec.rs  rpc.rs  service.rs
pallets/abr/: Cargo.toml
pallets/abr/src/: lib.rs  mock.rs  tests.rs
pallets/asset/: Cargo.toml
pallets/asset/src/: lib.rs  mock.rs  tests.rs
pallets/assets/: Cargo.toml
pallets/assets/src/: lib.rs  tests.rs
pallets/market/: Cargo.toml
pallets/market-prices/: cargo.toml
pallets/market-prices/src/: lib.rs  mock.rs  tests.rs
pallets/market/src/: lib.rs  mock.rs  tests.rs
pallets/prices/: Cargo.toml
pallets/prices/rpc/: Cargo.toml
pallets/prices/rpc/runtime-api/: Cargo.toml
pallets/prices/rpc/runtime-api/src/: lib.rs
pallets/prices/rpc/src/: lib.rs
pallets/prices/src/: lib.rs  mock.rs  tests.rs
pallets/prices/src/tests/: test_helper.rs
pallets/risk-management/: Cargo.toml
pallets/risk-management/src/: lib.rs  mock.rs  tests.rs
pallets/support/: Cargo.toml
pallets/support/src/: lib.rs  test_helpers.rs  tests.rs  traits.rs  types.rs
pallets/support/src/test_helpers/: accounts_helper.rs  asset_helper.rs  market_helper.rs  trading_helper.rs
pallets/support/src/types/: abr.rs  asset.rs  common.rs  market.rs  market_prices.rs  prices.rs  serialization.rs  sync_facade.rs  trading-account.rs  trading.rs  trading_account.rs  trading_fees.rs
pallets/sync-facade/: Cargo.toml
pallets/sync-facade/src/: lib.rs  mock.rs  tests.rs
pallets/sync-facade/src/tests/: test_helper.rs
pallets/trading/: Cargo.toml
pallets/trading-account/: Cargo.toml
pallets/trading-account/src/: lib.rs  migrations.rs  mock.rs  tests.rs
pallets/trading-fees/: Cargo.toml
pallets/trading-fees/src/: lib.rs  mock.rs  tests.rs
pallets/trading-fees/src/tests/: test_helper.rs
pallets/trading/rpc/: Cargo.toml
pallets/trading/rpc/runtime-api/: Cargo.toml
pallets/trading/rpc/runtime-api/src/: lib.rs
pallets/trading/rpc/src/: lib.rs
pallets/trading/src/: lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: new_scripts.cjs  package-lock.json  package.json  prod-runtimeupdate.ts  sandbox-2-after-drop-data.ts  sandbox-2-runtimeupdate.ts  sandbox-after-drop-data.ts  sandbox-runtimeupdate.ts  stage-after-drop-data.ts  stage-runtimeupdate.ts  stage-runtimeupdate.ts.ts  stand-1-after-drop-data.ts  stand-1-runtimeupdate.ts  stand-1.ts  stand-2-after-drop-data.ts  stand-2-runtimeupdate.ts  stand-2.ts  stand-3-after-drop-data.ts  stand-3.ts  stand-4-after-drop-data.ts  stand-4-runtimeupdate.ts  stand-5-runtimeupdate.ts  substrate-create-accounts.ts  substrate-init-fee.ts
scripts/init-liquidation/: Dockerfile  README.md  package-lock.json  package.json
scripts/init-liquidation/src/: add-liquidator-signer.ts  index.ts  init-abr-timestamp.ts  rpc.ts  substrate.helper.ts
test-scripts/: .mocharc.json  config.ts  connect.js  generateAccount.js  package-lock.json  package.json  positions.ts  rpc.ts  sendTransaction.js  some.json  starknet-test.helper.ts  substrate-trading-test-2.ts  substrate-trading-test.ts  substrate.helper.ts  test.ts  tsconfig.json
test-scripts/src/data/: assets.ts  index.ts  markets.ts
test-scripts/src/entities/: asset.entity.ts  balance.entity.ts  index.ts  market.entity.ts  starknetAccountEntity.entity.ts  tradingAccount.entity.ts
test-scripts/src/helpers/: index.ts  starknet-test.helper.ts  starknet.helper.ts  substrate.helper.ts
test-scripts/src/providers/: substrate.service.ts
test-scripts/src/providers/rpc/: index.ts  rpc.ts  types.ts
test-scripts/src/tests/: deposit-withdraw.spec.ts
