[workspace]
members = [
    "node",
    "pallets/asset",
    "pallets/market",
    "pallets/prices",
    "pallets/risk-management",
    "pallets/support",
    "pallets/sync-facade",
    "pallets/trading",
    "pallets/trading-account",
    "pallets/trading-fees",  
    "runtime",
]
resolver = "2"
[profile.release]
panic = "unwind"