[package]
name = "pallet-risk-management"
version = "0.0.1-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frame-support = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42"}
frame-system = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive",] }
primitive-types = { version = "0.12.1", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
sp-arithmetic = { version = "16.0.0", default-features = false }
zkx-support= { path="../support"}

[dev-dependencies]
sp-core = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-io = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-runtime = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-timestamp = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42"}
starknet-crypto = { version = "0.6.0", default-features = false }
pallet-asset = { default-features = false, path = "../asset" }
pallet-market = { default-features = false, path = "../market" }
pallet-market-prices = { default-features = false, path = "../market-prices" }
pallet-risk-management = { default-features = false, path = "../risk-management" }
pallet-trading = { default-features = false, path = "../trading" }
pallet-trading-fees = { default-features = false, path = "../trading-fees" }
pallet-zkx-trading-account = { default-features = false, path = "../trading-account" }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "codec/std",
    "scale-info/std",
    "sp-arithmetic/std",
]