[package]
name = "pallet-support"
version = "0.0.1-dev"
description = "Shared files for all pallets"
authors = ["ZKX"]
homepage = "https://zkx.fi"
edition = "2021"
license = "MIT-0"
publish = false

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
primitive-types = { version = "0.12.1", default-features = false }
sp-arithmetic = { version = "16.0.0", default-features = false, features = ["serde"] }
sp-runtime = { version = "24.0.0", default-features = false,  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0"  }
sp-io = { version = "23.0.0", git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v1.0.0" }
starknet-ff = { version = "0.3.4", default-features = false }
starknet-crypto = { version = "0.6.0", default-features = false }
starknet-core = { version = "0.5.0", default-features = false }
itertools = {version = "0.11.0", default-features = false}
serde = { version = "1.0.163", default-features=false, features = ["derive"] }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "codec/std",
    "scale-info/std",
    "sp-arithmetic/std",
    "sp-io/std",
]