[package]
name = "pallet-prices-runtime-api"
version = "0.0.1-dev"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-support = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0"}
sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }
primitive-types = { version = "0.12.1", default-features = false }
sp-arithmetic = { version = "16.0.0", default-features = false }

pallet-support= { path="../../../support"}

[features]
default = ["std"]
std = [
    "sp-api/std",
]